Moved scripts to script/ folder

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body onload="init();">
     <div id="radar"></div>
 
-<script src="sketch.js"></script>
-<script src="radar.js"></script>
+<script src="script/sketch.js"></script>
+<script src="script/radar.js"></script>
 
 <script type="text/javascript" src="lib/soundjs-NEXT.js"></script>
 <!-- We also provide hosted minified versions of all CreateJS libraries.
